maj_versionAngular